--- a/Projects/Pokemon Project/style.css
+++ b/Projects/Pokemon Project/style.css
@@ -187,9 +187,10 @@ i {
   }
 
   .main-container {
-    margin: 0.25rem 0.25rem;
+    margin: -6rem 0.25rem;
     padding: 0.5rem;
-    border-radius: 1rem;
+    border-radius: 2rem;
+    transform: scale(0.7);
   }
 
   .main-title h1 {
