--- a/Projects/Pokemon Project/style.css
+++ b/Projects/Pokemon Project/style.css
@@ -129,6 +129,7 @@ button:hover {
   font-size: 2rem;
   margin: 1rem 4rem;
   font-size: 3rem;
+  font-weight: bolder;
   justify-content: center;
   align-items: center;
   color: rgb(135, 0, 202);
@@ -204,7 +205,7 @@ i {
   }
   .search-input,
   .search-button {
-    font-size: 0.8rem;
+    font-size: 1rem;
     padding: 0.5rem;
     margin: 0.25rem 0;
   }
