--- a/Styles/_carousel.scss
+++ b/Styles/_carousel.scss
@@ -5,7 +5,7 @@
 .floating-carousel {
   position: relative;
   max-width: 100%;
-  margin: 2rem auto;
+  margin: 0rem auto;
   background-color: $primaryColor;
   border-radius: 4rem;
   box-shadow: $mainShadow;
@@ -33,7 +33,7 @@
 
 .carousel-item img {
   width: 100%;
-  height: 110%;
+  height: 100%;
   display: block;
   border-radius: 4rem;
 }
@@ -71,12 +71,22 @@
   cursor: pointer;
   z-index: 10;
   border-radius: 50%;
+  transition: none;
 }
 .carousel-control.prev {
   left: 1rem;
+  position: absolute;
 }
 .carousel-control.next {
   right: 1rem;
+  position: absolute;
+}
+.carousel-control:hover,
+.carousel-control:active {
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 1rem;
+  transition: none;
 }
 /* Responsive adjustments */
 @media screen and (min-width: 1016px) and (max-width: 1440px) {
