--- a/Styles/style.css
+++ b/Styles/style.css
@@ -48,7 +48,7 @@
 
 body {
   font-family: "Courgette", cursive;
-  background-image: linear-gradient(-45deg, rgb(241, 50, 216), rgb(208, 98, 230), rgb(124, 197, 245), rgb(158, 158, 235));
+  background-image: linear-gradient(-45deg, rgb(241, 50, 216), rgb(208, 98, 230), rgb(124, 197, 245), rgb(158, 158, 235), rgb(255, 0, 221));
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
 }
@@ -56,7 +56,7 @@ body {
 section {
   padding: 3.2rem 0;
   margin: 2rem;
-  background-image: linear-gradient(-45deg, rgb(124, 195, 243), rgba(225, 245, 116, 0.918), rgb(253, 54, 253));
+  background-image: linear-gradient(-45deg, rgb(75, 90, 100), rgba(225, 245, 116, 0.918), rgb(252, 151, 252), rgb(217, 140, 248));
   background-size: 400% 400%;
   animation: gradient 30s ease infinite;
   border-radius: 3rem;
@@ -144,9 +144,9 @@ h5:hover {
   padding: 0.5rem;
   margin: 1rem 0;
   color: #000000;
-  background-color: rgba(212, 163, 236, 0.7450980392);
+  background-color: rgba(242, 215, 255, 0.6705882353);
   font-family: "Kalam";
-  border: 0.2rem solid rgb(165, 166, 168);
+  border: 0.2rem solid #a009f7;
   border-radius: 4rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   flex-direction: column;
@@ -183,7 +183,7 @@ h5:hover {
   font-size: x-large;
 }
 .paragraph-div:hover {
-  border: 0.4rem solid rgb(165, 166, 168);
+  border: 0.4rem solid rgba(255, 0, 242, 0.658);
   box-shadow: 0.5rem 0.3rem 0.5rem rgb(129, 130, 133);
 }
 .paragraph-div .platforms-links {
@@ -734,7 +734,7 @@ html[data-page=index-german] .h4-title {
 .floating-carousel {
   position: relative;
   max-width: 100%;
-  margin: 2rem auto;
+  margin: 0rem auto;
   background-color: #a009f7;
   border-radius: 4rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -765,7 +765,7 @@ html[data-page=index-german] .h4-title {
 
 .carousel-item img {
   width: 100%;
-  height: 110%;
+  height: 100%;
   display: block;
   border-radius: 4rem;
 }
@@ -804,14 +804,25 @@ html[data-page=index-german] .h4-title {
   cursor: pointer;
   z-index: 10;
   border-radius: 50%;
+  transition: none;
 }
 
 .carousel-control.prev {
   left: 1rem;
+  position: absolute;
 }
 
 .carousel-control.next {
   right: 1rem;
+  position: absolute;
+}
+
+.carousel-control:hover,
+.carousel-control:active {
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 1rem;
+  transition: none;
 }
 
 /* Responsive adjustments */
