--- a/Styles/style_resume.scss
+++ b/Styles/style_resume.scss
@@ -23,6 +23,20 @@
   height: 45rem;
   margin: calc(50vh - 22.5rem) auto 0 auto;
   padding: 2rem;
+  perspective: 250rem;
+  animation: show-animate 2s forwards;
+}
+
+@keyframes show-animate {
+  0%,
+  30% {
+    opacity: 0;
+    transform: rotate(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
 }
 .cover {
   position: absolute;
@@ -39,6 +53,10 @@
 .cover.cover-left {
   z-index: -1;
 }
+.cover.cover-right {
+  z-index: 100;
+  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 .cover.cover-right.turn {
   transform: rotateY(180deg);
 }
@@ -47,6 +65,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  perspective: 250rem;
 }
 .book .book-page {
   position: absolute;
@@ -56,6 +75,9 @@
   box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
   display: flex;
   padding: 2rem;
+}
+.book-page.page-left {
+  box-shadow: -0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.1);
 }
 .profile-page {
   display: flex;
@@ -131,6 +153,7 @@
   right: 0;
   transform-style: preserve-3d;
   transform-origin: left;
+  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 .book-page.page-right.turn {
   transform: rotateY(-180deg);
@@ -258,22 +281,61 @@
   font-size: 3rem;
   color: var(--main-color);
 }
-// .services-box {
-//   display: flex !important;
-//   flex-wrap: wrap !important;
-// }
-// .services-box .services-content {
-//   flex-wrap: 1 1 10rem;
-//   border: var(--border);
-//   border-radius: 0.5rem;
-//   text-align: center;
-//   padding: 0.8rem 0.5rem 1.1rem;
-// }
-// .btn-box .btn:nth-child(2) {
-//   background: transparent;
-//   color: $primaryColor;
-// }
-// .btn-box .btn:nth-child(2):hover {
-//   background: var(--main-color);
-//   color: var(--white-color);
-// }
+.contact-box {
+  text-align: center;
+}
+.contact-box .field {
+  width: 100%;
+  background: transparent;
+  border: var(--border);
+  border-radius: 0.3rem;
+  padding: 0.8rem;
+  font-size: 1rem;
+  color: var(--text-color);
+  margin-bottom: 1.5rem;
+}
+.contact-box .field::placeholder {
+  color: var(--text-color);
+}
+.contact-box textarea {
+  resize: none;
+  height: 15rem;
+}
+.contact-box .btn {
+  cursor: pointer;
+}
+.back-profile {
+  position: absolute;
+  bottom: 1.2rem;
+  right: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: 0.3rem;
+  font-size: 1.1rem;
+  color: var(--main-color);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: 1s;
+}
+.back-profile:hover {
+  background: var(--main-color);
+  color: var(--white-color);
+}
+.back-profile p {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) scale(0.5);
+  font-size: 1rem;
+  color: var(--main-color);
+  opacity: 0;
+  transition: 0.7s;
+}
+.back-profile:hover p {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+  top: -1.8rem;
+}
