--- a/Styles/mobileResume.scss
+++ b/Styles/mobileResume.scss
@@ -14,51 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   color: var(--text-color);
-}
-.wrapper {
-  position: relative;
-  width: 66rem;
-  height: 45rem;
-  margin: calc(50vh - 22.5rem) auto 0 auto;
-  padding: 2rem;
-  perspective: 250rem;
-  animation: show-animate 2s forwards;
-}
-
-@keyframes show-animate {
-  0%,
-  30% {
-    opacity: 0;
-    transform: rotate(-20deg);
-  }
-  100% {
-    opacity: 1;
-    transform: rotate(0deg);
-  }
-}
-.cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 100%;
-  background: var(--cover-color);
-  box-shadow: var(--box-shadow);
-  border-top-left-radius: 0.6rem;
-  border-bottom-left-radius: 0.6rem;
-  transform-origin: right;
-}
-.cover.cover-left {
-  z-index: -1;
-}
-.cover.cover-right {
-  z-index: 100;
-  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.cover.cover-right.turn {
-  transform: rotateY(180deg);
 }
 .book {
   position: relative;
@@ -66,19 +22,33 @@
   height: 100%;
   display: flex;
   perspective: 250rem;
+  flex-direction: column !important;
 }
-.book .book-page {
-  position: absolute;
-  width: 50%;
+.book-page {
+  box-shadow: -0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.1);
+  position: relative !important;
+  width: 60% !important;
   height: 100%;
+  margin-left: 20% !important;
   background: var(--pages-color);
-  box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
   display: flex;
   padding: 2rem;
+  justify-content: center;
+  flex-direction: column !important;
+  margin-bottom: 3rem;
+  margin-top: 1rem;
+  border-radius: 1rem;
+  border: outset 1rem $primaryColor;
 }
-.book-page.page-left {
-  box-shadow: -0.6rem 0.6rem 0.6rem rgba(0, 0, 0, 0.1);
-}
+// .book-page {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: var(--pages-color);
+//   padding: 1.5rem 2rem;
+// }
 .profile-page {
   display: flex;
   flex-direction: column;
@@ -148,34 +118,9 @@
   color: $primaryColor;
   border: inset $primaryColor;
 }
-.book-page.page-right {
-  position: absolute;
-  right: 0;
-  transform-style: preserve-3d;
-  transform-origin: left;
-  transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.book-page.page-right.turn {
-  transform: rotateY(-180deg);
-}
-.book-page .page-front,
-.book-page .page-back {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--pages-color);
-  padding: 1.5rem 2rem;
-}
+
 .workeduc-box h3 {
   z-index: 0;
-}
-.book-page .page-front {
-  transform: rotateY(0deg) translateZ(1px);
-}
-.book-page .page-back {
-  transform: rotateY(180deg) translateZ(1px);
 }
 .workeduc-content,
 .services-content {
@@ -220,37 +165,25 @@
 }
 .number-page {
   position: absolute;
-  bottom: 1.2rem;
+  bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
-}
-.nextprev-btn {
-  position: absolute;
-  bottom: 0.9rem;
-  right: 1.5rem;
-  width: 2rem;
-  height: 2rem;
-  cursor: pointer;
-  font-size: 2rem;
-  color: var(--second-text-color);
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0.5s;
-}
-.nextprev-btn:hover {
-  color: $primaryColor;
-}
-.nextprev-btn.back {
-  left: 1.5rem;
 }
 .skills-box {
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 .skills-box .skills-content {
   flex: 1 1 20rem !important;
+}
+.skills-content-title {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 .skills-content h3 {
   font-size: 1.3rem;
@@ -260,6 +193,8 @@
 .skills-content .content {
   display: flex !important;
   flex-wrap: wrap !important;
+  justify-content: center !important;
+  align-items: center !important;
   gap: 0.8rem;
 }
 .skills-content .content span {
@@ -303,46 +238,6 @@
 }
 .contact-box .btn {
   cursor: pointer;
-}
-.back-profile {
-  position: absolute;
-  bottom: 1.2rem;
-  right: 2rem;
-  width: 2rem;
-  height: 2rem;
-  background: transparent;
-  border: var(--border);
-  border-radius: 0.3rem;
-  font-size: 1.1rem;
-  color: var(--main-color);
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  transition: 1s;
-}
-.back-profile:hover {
-  background: var(--main-color);
-  color: var(--white-color);
-}
-.back-profile p {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%) scale(0.5);
-  font-size: 1rem;
-  color: var(--main-color);
-  opacity: 0;
-  transition: 0.7s;
-}
-.back-profile:hover p {
-  opacity: 1;
-  transform: translateX(-50%) scale(1);
-  top: -1.8rem;
-}
-
-// Rsponsiveness
-@media (max-width: 1100px) {
-  .main-resume {
-    display: none;
-  }
+  margin-bottom: 1rem;
+  width: 9rem;
 }
