--- a/Styles/style_resume.scss
+++ b/Styles/style_resume.scss
@@ -38,6 +38,9 @@
     transform: rotate(0deg);
   }
 }
+h3 {
+  text-shadow: none;
+}
 .cover {
   position: absolute;
   top: 0;
@@ -201,12 +204,12 @@
 }
 .workeduc-box {
   border-left: var(--border);
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 .workeduc-box .workeduc-content {
   position: relative;
   padding-left: 1.6rem;
-  margin-bottom: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 .workeduc-box .workeduc-content::before {
   content: "";
