adding dropdown menu and splitting my files page

--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -11,4 +11,5 @@
 @import "./contact";
 @import "./stickyButtons";
 @import "./animations";
+@import "./styleFiles";
 // Style.scss - the main scss file.
