--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1688,4 +1688,50 @@ html[data-page=index-german] .h4-title {
     max-height: 20rem;
     opacity: 1;
   }
+}
+.download-files {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.my-files {
+  z-index: 900;
+  display: inline-block;
+  position: static;
+  padding: 1.5rem;
+  margin: 0 1rem;
+  max-width: 40rem;
+  min-height: 20rem;
+  font-size: x-large;
+  background-color: rgba(212, 163, 236, 0.8705882353);
+  line-height: 3rem;
+  border: 0.1rem solid rgba(177, 177, 177, 0.548);
+  border-radius: 3rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  transition: 1s;
+}
+.my-files a {
+  color: #000000;
+  transition: 1s;
+}
+.my-files a:hover {
+  font-weight: bolder;
+  text-shadow: 0.3rem 0.3rem 0.3rem rgb(127, 169, 223);
+}
+.my-files i {
+  font-size: x-large;
+  color: #a009f7;
+  transition: 1s;
+}
+.my-files i:hover {
+  transform: scale(1.5);
+}
+.my-files:hover {
+  text-shadow: 0.1rem 0.2rem 0.4rem rgb(249, 249, 253);
+  box-shadow: 0.5rem 0.3rem 0.5rem rgb(129, 130, 133);
+}
+
+.files-list {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
