--- a/Styles/mobileResume.scss
+++ b/Styles/mobileResume.scss
@@ -10,6 +10,9 @@
   --border: 0.125rem solid #00abf0;
   --box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.2);
 }
+h3 {
+  text-shadow: none;
+}
 .main-resume {
   display: flex;
   justify-content: center;
