--- a/Styles/mobileResume.css
+++ b/Styles/mobileResume.css
@@ -11,6 +11,10 @@
   --box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.2);
 }
 
+h3 {
+  text-shadow: none;
+}
+
 .main-resume {
   display: flex;
   justify-content: center;
