--- a/Styles/style_resume.scss
+++ b/Styles/style_resume.scss
@@ -9,6 +9,7 @@
   --pages-color: linear-gradient(90deg, #fff, #ddd);
   --border: 0.125rem solid #00abf0;
   --box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.2);
+  color-scheme: light;
 }
 .main-resume {
   display: flex;
