--- a/Styles/mobileResume.css
+++ b/Styles/mobileResume.css
@@ -24,7 +24,7 @@ h3 {
 
 .book {
   position: relative;
-  width: 100%;
+  width: 60%;
   height: 100%;
   display: flex;
   perspective: 250rem;
@@ -64,16 +64,20 @@ h3 {
 .profile-page h1 {
   font-size: 2.7rem;
   line-height: 1;
+  text-align: center;
 }
 
 .profile-page h3 {
   font-size: 1.5rem;
   color: #a009f7;
   z-index: 0;
+  text-align: center;
 }
 
 .profile-page .social-media {
   margin: 0.6rem 0 0.8rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-page .social-media a {
@@ -103,6 +107,9 @@ h3 {
 
 .profile-page .btn-box {
   margin-top: 1.2rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .btn {
@@ -273,4 +280,26 @@ h3 {
   cursor: pointer;
   margin-bottom: 1rem;
   width: 9rem;
+}
+
+@media (max-width: 630px) {
+  .profile-page .btn-box {
+    flex-direction: column !important;
+  }
+  .profile-page .social-media {
+    margin-left: 4%;
+  }
+}
+@media (max-width: 480px) {
+  .book {
+    width: 100%;
+  }
+  .book-page {
+    width: 100%;
+    margin: 1rem;
+    margin-left: 25%;
+  }
+  .profile-page .social-media {
+    margin-left: 3%;
+  }
 }/*# sourceMappingURL=mobileResume.css.map */
