--- a/Styles/_basicSettings.scss
+++ b/Styles/_basicSettings.scss
@@ -166,6 +166,17 @@ h5 {
       font-size: x-large;
     }
   }
+  a {
+    color: inherit;
+    text-decoration: inherit;
+
+    &:visited {
+      color: inherit;
+    }
+    &:hover {
+      text-decoration: inherit;
+    }
+  }
 }
 .intro-paragraph {
   flex-direction: row;
