--- a/Styles/_styleFiles.scss
+++ b/Styles/_styleFiles.scss
@@ -1,7 +1,7 @@
 .download-files {
-  display: flex; // Enable flexbox
-  justify-content: center; // Center horizontally
-  align-items: center; // Center vertically
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .my-files {
   @include displaySet($dspl: inline-block, $position: static, $zIndx: 900);
@@ -13,7 +13,7 @@
   );
   @include fontNtext(
     $font-size: x-large,
-    $bgColor: #d4a3ecde,
+    $bgColor: #f2d7ffab,
     $lnHeight: 3rem,
     $border: 0.1rem solid rgba(177, 177, 177, 0.548),
     $borderRds: 3rem,
@@ -24,6 +24,12 @@
   a {
     color: #000000;
     transition: 1s;
+    display: flex; // Enable flexbox for the link
+    align-items: center; // Center the content vertically
+    width: 100%; // Take full width of the parent
+    text-decoration: none; // Remove default underline
+    padding: 0.5rem 0; // Add padding for better spacing
+    text-align: left;
   }
   a:hover {
     @include fontNtext(
@@ -45,6 +51,27 @@
     );
   }
 }
-.files-list {
-  text-align: center;
+.files {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  .file-item {
+    display: flex;
+    border: $primaryColor 0.3rem outset;
+    padding: 0.7rem;
+    width: 100%;
+    border-radius: 1rem;
+    margin: 1rem;
+    align-items: center;
+    &:hover {
+      border: $primaryColor 0.3rem inset;
+    }
+    .file-icon {
+      display: block;
+      margin-right: 0.5rem;
+      justify-content: flex-start;
+      padding: 0 1rem;
+    }
+  }
 }
