--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -32,6 +32,7 @@
     );
     a {
       color: #000000;
+      border-radius: 50%;
     }
     a:hover {
       @include fontNtext(
@@ -162,6 +163,15 @@
         $width: 26rem
       );
     }
+    .contact-directly {
+      li {
+        margin: 0.5rem 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      }
+    }
     .form {
       input,
       textarea {
@@ -182,16 +192,18 @@
     }
     .contact-directly {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
       .contact-options {
         display: flex;
-        flex-direction: column;
       }
-      i {
-        border: none;
+      li {
+        margin: 0.5rem 1.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
       }
       a {
         padding: 0 2rem;
@@ -200,7 +212,6 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        border: none;
       }
     }
     .form {
