links-resume progress

--- a/Styles/mobileResume.css
+++ b/Styles/mobileResume.css
@@ -14,6 +14,22 @@
 h3 {
   text-shadow: none;
 }
+h3:hover {
+  text-shadow: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+a:visited {
+  text-decoration: none;
+  color: inherit;
+}
 
 .main-resume {
   display: flex;
@@ -119,7 +135,7 @@ h3 {
   width: 9.5rem;
   height: 3rem;
   background: #a009f7;
-  color: var(--white-color);
+  color: var(--white-color) !important;
   border: 0.3rem outset var(--white-color);
   border-radius: 0.7rem;
   font-size: 1.2rem;
@@ -130,7 +146,7 @@ h3 {
 
 .btn:hover {
   background: transparent;
-  color: #a009f7;
+  color: #a009f7 !important;
   border: inset #a009f7;
 }
 
