--- a/Styles/style_resume.scss
+++ b/Styles/style_resume.scss
@@ -27,7 +27,18 @@
   perspective: 250rem;
   animation: show-animate 2s forwards;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
+  &:visited {
+    text-decoration: none;
+    color: inherit;
+  }
+}
 @keyframes show-animate {
   0%,
   30% {
@@ -41,6 +52,9 @@
 }
 h3 {
   text-shadow: none;
+  &:hover {
+    text-shadow: none;
+  }
 }
 .cover {
   position: absolute;
@@ -139,7 +153,7 @@ h3 {
   width: 9.5rem;
   height: 3rem;
   background: $primaryColor;
-  color: var(--white-color);
+  color: var(--white-color) !important;
   border: 0.3rem outset var(--white-color);
   border-radius: 0.7rem;
   font-size: 1.2rem;
@@ -149,7 +163,7 @@ h3 {
 }
 .btn:hover {
   background: transparent;
-  color: $primaryColor;
+  color: $primaryColor !important;
   border: inset $primaryColor;
 }
 .book-page.page-right {
