--- a/Styles/mobileResume.scss
+++ b/Styles/mobileResume.scss
@@ -10,7 +10,8 @@
   --border: 0.125rem solid #00abf0;
   --box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.2);
 }
-h3 {
+h3,
+h2 {
   text-shadow: none;
   &:hover {
     text-shadow: none;
@@ -83,8 +84,8 @@ a {
   line-height: 1;
   text-align: center;
 }
-.profile-page h3 {
-  font-size: 1.5rem;
+.profile-page h2 {
+  font-size: 1.8rem;
   color: $primaryColor;
   z-index: 0;
   text-align: center;
