--- a/Styles/style_resume.scss
+++ b/Styles/style_resume.scss
@@ -50,7 +50,7 @@ a {
     transform: rotate(0deg);
   }
 }
-h3 {
+h3, h2 {
   text-shadow: none;
   &:hover {
     text-shadow: none;
@@ -113,8 +113,8 @@ h3 {
   font-size: 2.7rem;
   line-height: 1;
 }
-.profile-page h3 {
-  font-size: 1.5rem;
+.profile-page h2 {
+  font-size: 1.8rem;
   color: $primaryColor;
   z-index: 0;
 }
