updting images async scripts links for seo

--- a/Styles/_headerNfooter.scss
+++ b/Styles/_headerNfooter.scss
@@ -252,6 +252,9 @@ footer {
   }
 }
 @media screen and (max-width: 480px) and (orientation: portrait) {
+  h1 {
+    transform: scale(0.7);
+  }
   header,
   footer {
     width: 150%;
