--- a/Styles/_images.scss
+++ b/Styles/_images.scss
@@ -33,7 +33,7 @@
 }
 .p_img_1 img {
   @include sizesNgaps($width: 20rem, $height: 20rem);
-  border-color: rgb(219, 105, 230);
+  border-color: $primaryColor;
   z-index: 3;
   &:hover {
     height: 30rem;
@@ -41,7 +41,7 @@
 }
 .p_img_2 img {
   @include sizesNgaps($width: 22rem, $height: auto);
-  border-color: rgb(166, 105, 223);
+  border-color: $primaryColor;
   &:hover {
     transform: scale(1.02);
   }
