--- a/Styles/_variables.scss
+++ b/Styles/_variables.scss
@@ -85,3 +85,5 @@ $icon-glowing-shadow: inset 0 0 50px #fff,
   /* inner left magenta broad */ inset -20px 0 300px #0ff,
   /* inner right cyan broad */ 0 0 50px #fff,
   /* outer white */ -10px 0 80px #f0f, /* outer left magenta */ 10px 0 80px #0ff; /* outer right cyan */
+$title-span-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px,
+  2px 2px 2px rgba(255, 255, 255, 0.04);
