--- a/Styles/style_resume.css
+++ b/Styles/style_resume.css
@@ -416,6 +416,18 @@ h3:hover, h2:hover {
   top: -1.8rem;
 }
 
+.link-span a {
+  color: inherit;
+  text-decoration: inherit;
+}
+.link-span a:visited {
+  color: inherit;
+}
+.link-span a:hover {
+  text-decoration: inherit;
+  color: #a009f7;
+}
+
 @media (max-width: 1100px) {
   .main-resume {
     display: none;
